--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <style>
+            body{
+                background-color: black;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1 style="font-family: Verdana;font-weight: normal;font-size: 50px;color: white;text-align: center;">Discover hidden places in the world around you</h1>
-        <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;">Download Excursion (Coming soon!)</a>
-        <h2 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center;">Your personal travel guide</h2>
-        <p style="font-family: Verdana;font-size: 21px;color: gray;">Excursion remembers places you like, and recommends new points of interest around you</p>
-        <h3 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center;">Coming soon for iPhone and Android </h3>
-        <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;">Download Excursion (Coming soon!)</a>
+        <h1 style="font-family: Verdana;font-weight: normal;font-size: 50px;color: white;text-align: center;align-self: center;">Discover hidden places in the world around you</h1>
+        <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;text-align: center;align-self: center;">Download Excursion (Coming soon!)</a>
+        <h2 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center;align-self: center;">Your personal travel guide</h2>
+        <p style="font-family: Verdana;font-size: 21px;color: gray;align-self: center;">Excursion remembers places you like, and recommends new points of interest around you</p>
+        <h3 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center; align-self: center;">Coming soon for iPhone and Android </h3>
+        <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;align-self: center;text-align: center;">Download Excursion (Coming soon!)</a>
         <p style="text-align: right;color: gray;">Excursion</p>
         <script src="" async defer></script>
     </body>
