almost final product

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
         <![endif]-->
         <h1 style="font-family: Verdana;font-weight: normal;font-size: 50px;color: white;text-align: center;align-self: center;">Discover hidden places in the world around you</h1>
         <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;text-align: center;align-self: center;">Download Excursion (Coming soon!)</a>
+        <video autoplay>
+            <source src="resources/excursion.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         <h2 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center;align-self: center;">Your personal travel guide</h2>
         <p style="font-family: Verdana;font-size: 21px;color: gray;align-self: center;">Excursion remembers places you like, and recommends new points of interest around you</p>
+        <img src="resources/camp.webp" alt="campament" style="align-self: center;">
+        <img src="resources/phone.webp" alt="phone" style="align-self: center;">
         <h3 style="font-family: Verdana;font-weight: normal;font-size: 42px;color: white;text-align: center; align-self: center;">Coming soon for iPhone and Android </h3>
         <a href="a-florezmeyer.github.io" style="color: aquamarine;font-size: 16px;align-self: center;text-align: center;">Download Excursion (Coming soon!)</a>
         <p style="text-align: right;color: gray;">Excursion</p>
